fix div button overlap issue

--- a/frontend/css/panels/sequences.scss
+++ b/frontend/css/panels/sequences.scss
@@ -45,7 +45,7 @@
     }
     .add-command-button-container {
       display: block;
-      height: auto;
+      height: 0;
       .bp6-collapse {
         padding: 0;
       }
